# lvgl_file_manager

./: CMakeLists.txt  README.md  partition.csv  sdkconfig  sdkconfig.old
components/_libpng/: idf_component.yml
components/global/: CMakeLists.txt  global.c
components/global/include/: global.h
components/lvgl/: lv_conf.h
components/lvgl/env_support/cmake/: esp.cmake
components/lvgl/src/libs/libpng/: lv_libpng.c
components/lvgl_esp32_drivers/: CMakeLists.txt  lvgl_helpers.h  lvgl_spi_conf.h
components/lvgl_esp32_drivers/lvgl_tft/: disp_driver.c  disp_driver.h  disp_spi.c  ili9341.c  ili9341.h
components/lvgl_esp32_drivers/lvgl_touch/: touch_driver.c  touch_driver.h  xpt2046.c  xpt2046.h
components/lvgl_file_manager/: CMakeLists.txt  lvgl_file_manager.cpp
components/sd_card/: CMakeLists.txt  sd_card.c
components/sd_fat/: CMakeLists.txt  fileio.c  sd_fat.c
components/sd_fat/include/: sd_fat.h
components/ui/: CMakeLists.txt  ui.cpp  ui.h
main/: CMakeLists.txt  app_main.c
